--- a/trabalhoDPW11set/index.css
+++ b/trabalhoDPW11set/index.css
@@ -8,6 +8,14 @@
             }
 
 
+
+    html, body {
+            height: 100%;
+            padding: 0px;
+            margin: 0px;
+            background:white;
+            font-family: sans-serif;
+        }   
     /* através da classe menu criada no arquivo html eu a estilizo aqui usando sua referência através de um ponto ".menu" */
         .menu{
             width:100%;
@@ -85,6 +93,39 @@
         label[for="bt_menu"]{
             display: none;
         }
+
+        #wrapper {
+            min-height: 100%;
+        }   
+
+    /* RODAPÉ */
+    .rodape{
+        background:#333399;
+        color:black;
+        height: 200px;
+        position: relative;
+    }
+    
+    .rodape .conteudo-rp{
+        border: 1px solid;
+        height:200px; 
+    }
+    
+    .rodape .rpbaixo{
+        background:#003366;
+        color:aliceblue;
+        height:40px;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        padding-top: 20px;
+        
+    }
+    /* /RODAPÉ */
+
+
 
     /* agora iremos usar uma query para responsividade do nosso menu "@media", o site mudará seu comportamento quando o viewport for menor do que 800px */
         @media(max-width:800px) {
