Testando imagens como fundo.
o trabalho exige uma imagem como fundo de alguma das páginas, apenas testando

--- a/trabalhoDPW11set/index.css
+++ b/trabalhoDPW11set/index.css
@@ -15,6 +15,7 @@
             margin: 0px;
             background:white;
             font-family: sans-serif;
+            background-image:url("background2.jpg")
         }  
 
     a:link{
