--- a/trabalhoDPW11set/index.css
+++ b/trabalhoDPW11set/index.css
@@ -13,8 +13,6 @@
             height: 100%;
             padding: 0px;
             margin: 0px;
-            background:white;
-            font-family: sans-serif;
             background-image:url("background2.jpg")
         }  
 
@@ -26,11 +24,7 @@
             text-decoration:none;
             color:azure;
         }
-    
-    .secao-rp ul li{
-            color: white;
-        }
-        
+            
     /* através da classe menu criada no arquivo html eu a estilizo aqui usando sua referência através de um ponto ".menu" */
         .menu{
             width:100%;
@@ -73,7 +67,7 @@
     
     /* aqui eu altero a cor de fundo dos itens do menu ao momento do toque do mouse */
         .menu a:hover{
-            background-color:#DC851F;
+            background-color:#FF9505;
             color:black;
         }
 
@@ -86,13 +80,11 @@
         }
 
         .menu ul ul li a{
-            background-color:#DC851F;
+            background-color:#FF9505;
         }
 
         label[for="bt_menu"]{
             padding: 5px;
-            background-color:dimgrey;
-            color: azure;
             font-family: "arial";
             text-align: center;
             font-size: 30px;
@@ -110,14 +102,118 @@
         }
 
         #wrapper {
+            /*utilizo esses 5 primeiros comandos pra ajudar na formatação das divs internas */
+            align-items: center;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            /*  .... */
             background-color:#4C4C47;
-            text-align: center;
             margin: 0 auto;
             min-height: 100%;
             width: 90%;
         }   
 
-    /* RODAPÉ */
+
+    /* agora iremos usar uma query para responsividade do nosso menu "@media", o site mudará seu comportamento quando o viewport for menor do que 800px */
+        @media(max-width:800px) {
+        /* agora definiremos o comportamento do menu num dispositivo menor */
+            
+            #bt_menu:checked ~ .menu{
+                margin-left: 0;
+            }
+            
+             label[for="bt_menu"]{
+                display: block;     
+            }
+            
+            .menu {
+                margin-top: 5px;
+                margin-left: -100%;
+                transition: all .4s;
+            }
+
+            .menu ul li {
+                width: 100%;
+                float: none;
+            }
+        /* ajustando os subitens para o novo viewport */
+            .menu ul ul{
+                position: static;
+                overflow: hidden;
+                max-height: 0;
+                transition: all .4s;
+            }
+        /* ajustando o hover ao novo viewport */
+            .menu ul li:hover ul{
+                height: auto;
+                max-height: 200px;
+            }
+    }
+
+  
+
+    /* FORMULÁRIO */
+    .labelform{
+        font-size: 15px;   
+        font-family:inherit;
+        font-weight:bold;        
+    }
+
+    .formH{
+        text-align: center;
+        font-family:serif;
+        font-size:auto;
+        color: #F39237;
+        margin: 15px;
+    }
+    
+    /* div informações pessoais */
+    #infoP{
+        display: inline-block;
+        position:static;
+        text-align:justify;
+        font-family: sans-serif;
+        border: 1px solid;
+        background-color: #FF9505;
+        margin: 20px;
+        border-radius: 10px;
+        padding:15px;
+        width:50%;
+    }
+    
+    /*div perguntas*/
+    #perguntas {
+        display:inline-block;
+        position: static;
+        font-family: sans-serif;
+        background-color: #FF9505;
+        text-align:justify;
+        border: 1px solid;
+        border-radius: 10px;
+        margin:20px;
+        padding:15px;
+        width: 50%;
+    }
+    
+    /* botão submit*/
+    #btenviar{ 
+        background-color:#FF9505;;
+        border: 1px solid;
+        color:black;
+        text-align: center;
+        display: inline-block;
+        cursor: pointer;
+        font-weight:bolder;
+        font-size: 16px;
+        padding: 15px 32px;
+        margin: 20px;
+    }
+    
+    /* FIM DO FORMULÁRIO */
+
+      /* RODAPÉ */
     .rodape{
         background:#4C4C47;
         color:black;
@@ -166,6 +262,10 @@
     .secao-rp ul{
         padding-left: 15px;
     }
+
+    .secao-rp ul li{
+            color: white;
+    }
     
     /*Cores do Link de Acesso Rápido a definir ainda */
    
@@ -175,7 +275,6 @@
     #acessorap:active{
         color:#DC851F ;
     }
-
     #acessorap:hover{
         color: #DC851F
     }
@@ -187,44 +286,5 @@
     }
 
     /* /RODAPÉ */
-
-
-
-    /* agora iremos usar uma query para responsividade do nosso menu "@media", o site mudará seu comportamento quando o viewport for menor do que 800px */
-        @media(max-width:800px) {
-        /* agora definiremos o comportamento do menu num dispositivo menor */
-            
-            #bt_menu:checked ~ .menu{
-                margin-left: 0;
-            }
-            
-             label[for="bt_menu"]{
-                display: block;     
-            }
-            
-            .menu {
-                margin-top: 5px;
-                margin-left: -100%;
-                transition: all .4s;
-            }
-
-            .menu ul li {
-                width: 100%;
-                float: none;
-            }
-        /* ajustando os subitens para o novo viewport */
-            .menu ul ul{
-                position: static;
-                overflow: hidden;
-                max-height: 0;
-                transition: all .4s;
-            }
-        /* ajustando o hover ao novo viewport */
-            .menu ul li:hover ul{
-                height: auto;
-                max-height: 200px;
-            }
-    }
-
         
 
